WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36672
Assertion failure: !repaintContainer || repaintContainer == this
https://bugs.webkit.org/show_bug.cgi?id=36672
Summary
Assertion failure: !repaintContainer || repaintContainer == this
Alexey Proskuryakov
Reported
2010-03-26 12:41:34 PDT
Opening
http://www.floreysoft.net/#main2product0sharedcontacts1
ASSERTION FAILED: !repaintContainer || repaintContainer == this (/Volumes/Data/Safari/OpenSource/WebCore/rendering/RenderView.cpp:266 virtual void WebCore::RenderView::computeRectForRepaint(WebCore::RenderBoxModelObject*, WebCore::IntRect&, bool))
Attachments
Testcase
(785 bytes, text/html)
2010-03-30 15:14 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(4.17 KB, patch)
2010-04-01 11:11 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-03-26 12:42:13 PDT
With
r56633
.
Simon Fraser (smfr)
Comment 2
2010-03-26 17:16:08 PDT
I can't reproduce this. I don't see any compositing stuff on this page at all.
Alexey Proskuryakov
Comment 3
2010-03-26 17:35:17 PDT
I can still reproduce with ToT,
r56648
.
Alexey Proskuryakov
Comment 4
2010-03-27 13:33:13 PDT
FWIW, this didn't happen for me under Fast Malloc.
Simon Fraser (smfr)
Comment 5
2010-03-29 15:25:53 PDT
Alexey: are you reproducing in a normal debug build?
Alexey Proskuryakov
Comment 6
2010-03-29 15:36:48 PDT
Oops,
comment 4
was meant to say "cannot reproduce under Guard Malloc". I can reproduce with normal debug build.
Simon Fraser (smfr)
Comment 7
2010-03-30 14:10:49 PDT
I can reproduce now.
Simon Fraser (smfr)
Comment 8
2010-03-30 15:14:37 PDT
Created
attachment 52087
[details]
Testcase
Simon Fraser (smfr)
Comment 9
2010-03-31 16:42:56 PDT
The problem here is that RenderText::clippedOverflowRectForRepaint() is calling containingBlock(), which skips the repaint container.
Simon Fraser (smfr)
Comment 10
2010-04-01 11:11:40 PDT
Created
attachment 52313
[details]
Patch
mitz
Comment 11
2010-04-01 11:15:12 PDT
Comment on
attachment 52313
[details]
Patch
> + Test for repainting where the repaintContainer is a descendent of the containing block.
Google says: Did you mean: descendant
> + So in this case, check to see whether repaintContainer is actually a descendent of the
Ditto.
Simon Fraser (smfr)
Comment 12
2010-04-01 11:19:40 PDT
http://trac.webkit.org/changeset/56924
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug